--- a/Football_Scores-master/app/src/main/AndroidManifest.xml
+++ b/Football_Scores-master/app/src/main/AndroidManifest.xml
@@ -24,7 +24,9 @@
 
         <provider
             android:name=".ScoresProvider"
-            android:authorities="barqsoft.footballscores" />
+            android:authorities="barqsoft.footballscores"
+            android:exported="true"
+            android:grantUriPermissions="true"/>
 
         <activity
             android:name=".AboutActivity"
@@ -35,6 +37,8 @@
                 android:value="barqsoft.footballscores.MainActivity" />
         </activity>
         <service android:name=".service.myFetchService" />
+        <service android:name=".service.FootballWidgetService"
+            android:permission="android.permission.BIND_REMOTEVIEWS"/>
         <receiver android:name=".appwidget.FootballWidget" >
             <intent-filter >
                 <action
